--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,25 +34,46 @@ jobs:
       - name: AWS 자격 증명 설정
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-region: ap-northeast-2
+          aws-region: ${{ env.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: SSH 키 설정
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.LIGHTSAIL_SSH_KEY }}" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          eval $(ssh-agent -s)
+          ssh-add ~/.ssh/deploy_key
+          ssh-keyscan -H ${{ secrets.LIGHTSAIL_HOST }} >> ~/.ssh/known_hosts
+
+      - name: 기존 디렉토리 정리
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.LIGHTSAIL_HOST }}
+          username: ${{ env.LIGHTSAIL_USERNAME }}
+          key_path: ~/.ssh/deploy_key
+          script: |
+            rm -rf /home/bitnami/test-cicd
+            mkdir -p /home/bitnami/test-cicd
 
       - name: 애플리케이션 파일 배포
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
-          username: bitnami
-          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-          source: '.'
+          username: ${{ env.LIGHTSAIL_USERNAME }}
+          key_path: ~/.ssh/deploy_key
+          source: 'dist/,package.json,package-lock.json'
           target: '/home/bitnami/test-cicd'
+          strip_components: 0
 
       - name: PM2 프로세스 재시작
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
-          username: bitnami
-          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+          username: ${{ env.LIGHTSAIL_USERNAME }}
+          key_path: ~/.ssh/deploy_key
           script: |
             cd /home/bitnami/test-cicd
-            sudo pm2 restart dist/main.js
+            npm ci --production
+            pm2 restart main || pm2 start dist/main.js --name main
