--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,15 +47,17 @@ jobs:
           ssh-add $HOME/.ssh/deploy_key
           ssh-keyscan -H ${{ secrets.LIGHTSAIL_HOST }} >> $HOME/.ssh/known_hosts
 
-      - name: 기존 디렉토리 정리
+      - name: 기존 디렉토리 정리 및 권한 설정
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ${{ env.LIGHTSAIL_USERNAME }}
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           script: |
-            rm -rf /home/bitnami/test-cicd
-            mkdir -p /home/bitnami/test-cicd
+            sudo rm -rf /home/bitnami/test-cicd
+            sudo mkdir -p /home/bitnami/test-cicd
+            sudo chown -R bitnami:bitnami /home/bitnami/test-cicd
+            sudo chmod -R 755 /home/bitnami/test-cicd
 
       - name: 애플리케이션 파일 배포
         uses: appleboy/scp-action@master
@@ -66,6 +68,7 @@ jobs:
           source: 'dist/,package.json,package-lock.json'
           target: '/home/bitnami/test-cicd'
           strip_components: 0
+          overwrite: true
 
       - name: PM2 프로세스 재시작
         uses: appleboy/ssh-action@master
@@ -75,5 +78,5 @@ jobs:
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           script: |
             cd /home/bitnami/test-cicd
-            npm ci --production
-            pm2 restart main || pm2 start dist/main.js --name main
+            sudo npm ci --production
+            sudo pm2 restart main || sudo pm2 start dist/main.js --name main
